manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: api-service
    namespace: divagando
spec:
    type: LoadBalancer
    selector:
        app: api
    ports:
    - port: 80
      targetPort: 5000
